@@ -24,8 +24,9 @@
   h3 {
     font-size: 0.9rem;
     font-weight: normal;
-    margin-bottom: 0.3rem;
+    padding: 0.4rem 0;
     margin-top: var(--gutter);
+    margin-bottom: 0.4rem;
     border-bottom: 1px solid var(--sidebar-left-border-bottom);
   }
 
