@@ -10,6 +10,10 @@
     color: var(--sidebar-right-text);
   }
 
+  h3 {
+    margin-bottom: 0.6rem;
+  }
+
   nav a {
     background: var(--sidebar-right-bg);
 
